# tars

./: .gitignore  .gitmodules  .mailmap  .webui_secret_key  ADVANCED_CLOSURE_FACTORY_ENHANCEMENTS_COMPLETE.md  ADVANCED_MATHEMATICAL_IMPLEMENTATION_COMPLETE.md  AGENTS.md  AUGMENT-TARS-INTEGRATION.md  AUTONOMOUS-IMPROVEMENT-README.md  Analyse du dépôt GitHub TARS.md  AnalyzeComplexFile.cs  AutoCodingTest.cs  AutonomousCICD.html  AutonomousEvolutionDemo.fsx  BUILD_ERRORS_FIXED_SUMMARY.md  BlueGreenEvolutionDemo.cs  BlueToGreenPromotion.fsx  CHANGELOG.md  CLAUDE.md  COMPLETE-TARS-EVOLUTION-REQUIREMENTS.md  COMPREHENSIVE_METASCRIPT_TEST_RESULTS.md  CONTEXT.md  CUDA_TESTS_README.md  ChatGPT-AI-Driven Elmish UI Creation.md  ChatGPT-CUDA vector store evaluation.md  ChatGPT-Clang for TARS Usage.md  ChatGPT-Leveraging Primes for TARS (1).md  ChatGPT-TARS-Repo-Claim-Analysis.md  CleanAutonomousCli.fs  CompleteSuperintelligence.fsproj  ComplexDuplicationDemo.cs  CustomDuplicationDemo.cs  DEPLOYMENT_GUIDE.md  DetailedExplorationAnalysis.fsx  DetailedTracingGenerator.fsx  DirectTaskManagerGenerator.fsx  Directory.Build.props  Dockerfile  Dockerfile.agents  Dockerfile.core  (+445 more)
.claude/: mcp.json  settings.json  settings.local.json
.devcontainer/: devcontainer.json
.sentrux/: rules.toml
.specify/: backlog.json
.tars/: INFRASTRUCTURE_AND_PACKAGING_SUMMARY.md  NEW_ORGANIZATION_SUMMARY.md  ORGANIZATION_SUMMARY.md  REORGANIZATION_PLAN.md  RIDER_SOLUTION_IMPROVEMENT_SUMMARY.md  TODO_AGENTS.md  TODO_DEPARTMENTS.md  TODO_DOCUMENTATION.md  TODO_INFRASTRUCTURE_DEPLOY.md  TODO_MASTER.md  TODO_RESEARCH.md  TODO_UI_TEAMS.md  WEBAPI_CLOSURE_FACTORY_SUMMARY.md  abstraction-extraction-agent.trsx  agent-ecosystem-analysis.trsx  autonomous-mcp-integration-demo.trsx  autonomous-mcp-integration.trsx  autonomous-ui-demo-execution.trsx  autonomous-ui-generation.trsx  comprehensive-documentation-project.trsx  demo-parallel-ui-development.trsx  demo_autonomous_ui.cmd  demo_autonomous_ui.ps1  demo_test.txt  departmental-team-organization.trsx  implement-departmental-organization.trsx  infrastructure-and-packaging-demo.trsx  live-endpoints-demo.trsx  llm-response-summarization-system.trsx  master-evolver-agent.trsx  (+38 more)
TODOs/: README.md  (+28 more)
src/TarsEngine/CUDA/: CMakeLists.txt  TarsAdvancedCudaKernels.h  TarsCudaKernels.cu  TarsReasoningKernels.cu  TarsReasoningKernels.h
(+8120 files in other folders)
